<resources>
    <string name="app_name">PR10_GLADUNOV</string>
    <string name="smart_ustr">Моё смарт-устройство</string>
    <string name="butt0n_ustr">TODO</string>
    <string name="_1_3_km">1.3 km</string>
    <string name="_59_kcal">59 kcal</string>
    <string name="smartustroistvo">TODO</string>
    <string name="SMARTUSTR">Моё смарт-устройство</string>
    <string name="KILOMETERS">TODO</string>
    <string name="_1_3_km">1.3 km</string>
    <string name="KALORIES">TODO</string>
    <string name="_59_kcal">59 kcal</string>
    <string name="time">TODO</string>
    <string name="_30_min">30 min</string>
    <string name="STEPss">TODO</string>
    <string name="_1583_steps">1583 steps</string>
    <string name="ves">TODO</string>
    <string name="_62_kg">62 kg</string>
    <string name="Pulse">TODO</string>
    <string name="Vess">TODO</string>
    <string name="_82_bpm">82 bpm</string>
    <string name="Pullse">TODO</string>
    <string name="graph">TODO</string>
    <string name="_112576_steps">112576 steps</string>
    <string name="STEEPS">TODO</string>
    <string name="todo">TODO</string>
    <string name="MARSHRUTSS">TODO</string>
    <string name="marshruts">Маршруты</string>
    <string name="Info">TODO</string>
    <string name="Infoo">Краткая информация</string>
    <string name="streelka">TODO</string>
    <string name="nazad">TODO</string>
</resources>